fixes firefox dark mode not supporting color-scheme and having a light bg

--- a/theme-switch/index.css
+++ b/theme-switch/index.css
@@ -14,6 +14,10 @@ html {
 
   &[data-theme="dark"] {
     color-scheme: dark;
+
+    @supports not (color-scheme: dark) {
+      background: #111; 
+    }
   }
 }
 
